@@ -1,7 +1,5 @@
 #pragma once
 
-#include "../Display/Display.cpp"
-
 class InactivityWatcher {
 
   public:
@@ -19,14 +17,17 @@ class InactivityWatcher {
       if (_lastActivity + INACTIVITY_TRESHOLD < millis()) {
         Display::getInstance()->turnDisplayOff();
 
-            TTGOClass::getWatch()->power->setPowerOutPut(AXP202_LDO3, false);
-            TTGOClass::getWatch()->power->setPowerOutPut(AXP202_LDO4, false);
-            TTGOClass::getWatch()->power->setPowerOutPut(AXP202_EXTEN, false);
-            TTGOClass::getWatch()->power->setPowerOutPut(AXP202_DCDC2, false);
+        TTGOClass::getWatch()->power->setPowerOutPut(AXP202_LDO3, false);
+        TTGOClass::getWatch()->power->setPowerOutPut(AXP202_LDO4, false);
+        TTGOClass::getWatch()->power->setPowerOutPut(AXP202_EXTEN, false);
+        TTGOClass::getWatch()->power->setPowerOutPut(AXP202_DCDC2, false);
 
-            esp_sleep_enable_ext1_wakeup(GPIO_SEL_38, ESP_EXT1_WAKEUP_ALL_LOW);
-            TTGOClass::getWatch()->power->clearIRQ();
-            esp_light_sleep_start();
+        esp_sleep_enable_ext1_wakeup(
+          GPIO_SEL_37 & GPIO_SEL_38,
+          ESP_EXT1_WAKEUP_ALL_LOW
+        );
+        TTGOClass::getWatch()->power->clearIRQ();
+        esp_light_sleep_start();
       }
     }
 
@@ -34,7 +35,7 @@ class InactivityWatcher {
       _lastActivity = millis();
       Display::getInstance()->turnDisplayOn();
     }
-  
+
     protected:
 
       static InactivityWatcher *_inst;
